<resources>
    <string name="app_name">Sequencer</string>

    <string name="placeholder">Placeholder</string>

    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>

    <string name="confirm">Confirm</string>
    <string name="ok" translatable="false">OK</string>
    <string name="save"   >Save</string>
    <string name="cancel" >Cancel</string>

    <string name="username"        >Username</string>
    <string name="confirm_username">Confirm username</string>
    <string name="password"        >Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="mail"            >Mail</string>
    <string name="confirm_mail"    >Confirm mail</string>

    <string name="change_username">Change user name</string>
    <string name="change_password">Change password</string>
    <string name="change_mail"    >Change mail</string>

    <string name="input_error"         >Input error</string>
    <string name="user_input_error"    >You need to enter a name</string>
    <string name="password_input_error">You need to enter a password</string>
    <string name="mail_input_error"    >You need to enter an e-mail address</string>
    <string name="pass_confirm_error"  >Confirmation password not matching</string>
    <string name="mail_confirm_error"  >Confirmation mail not matching</string>
    <string name="login_user_error"    >Wrong user name</string>
    <string name="login_password_error">Wrong password</string>

    <string name="play" >Play</string>
    <string name="pause" translatable="false">Pause</string>
    <string name="stop" translatable="false">Stop</string>

    <string name="bar1">Bar 1</string>
    <string name="bar2">Bar 2</string>
    <string name="bar3">Bar 3</string>
    <string name="bar4">Bar 4</string>

    <string name="add" >Add</string>

    <string name="bpm_dialog"     >Beats per minute</string>
    <string name="sounds_dialog"  >Select a sound</string>
    <string name="logout_dialog"  >Log out ?</string>
    <string name="logout_message" >You will be disconnected and unsaved progress will be lost.</string>
    <string name="exit_dialog"    >Quit ?</string>
    <string name="exit_message"   >You will quit the application.</string>
    <string name="exit_pos_button">Quit</string>
    <string name="ow_dialog"      >Overwrite sequence ?</string>
    <string name="ow_message"     >Sequence already exists</string>
    <string name="ow_pos_button"  >Overwrite</string>

    <string name="save_string_format">Sequence : %s has been saved</string>
    <string name="ow_string_format"  >Sequence : %s has been overwritten</string>

    <string name="account"   >Account</string>
    <string name="settings"  >Settings</string>
    <string name="import_seq">Import</string>
    <string name="save_seq"  >Save</string>
    <string name="logout"    >Log out</string>

    <string name="bpm_short" translatable="false">BPM</string>
    <string name="bpm_long" >Beats Per Minute</string>
</resources>
