<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_username"
                android:inputType="text"
                android:textColor="@color/colorAccent"
                android:hint="@string/username"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_password"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                android:hint="@string/confirm_password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorAccent"
                android:hint="@string/mail"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white"
            android:layout_marginBottom="16dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_confirm_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorAccent"
                android:hint="@string/confirm_mail"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/confirm"
            android:onClick="signUp"
            android:background="@drawable/plain_button"/>
        <Button
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:onClick="cancel"
            android:background="@drawable/secondary_button"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>
</FrameLayout>