<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_username"
                android:inputType="text"
                android:textColor="@color/colorAccent"
                android:hint="@string/username"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_password"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/signin"
            android:background="@drawable/plain_button"
            android:onClick="logIn"/>
        <Button
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/signup"
            android:background="@drawable/secondary_button"
            android:textColor="@color/colorAccent"
            android:id="@+id/button_to_signup"
            android:onClick="toSignUp"/>

        <!-- TODO $$$ LAST CHECK $$$ don't forget to remove debug buttons -->
        <!-- DEBUG BUTTONS -->
        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="get all users"-->
            <!--android:onClick="allUsers"/>-->

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="get all roles"-->
            <!--android:onClick="allRoles"/>-->

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="get user_role"-->
            <!--android:onClick="allUserRoles"/>-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="get loc"
            android:textColor="@color/black"
            android:onClick="localizeMe"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toSeq"/>

    </LinearLayout>

</FrameLayout>