<?xml version="1.0" encoding="utf-8"?>

<!-- TODO don't forget to re-add the custom background -->

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sequencer_rootview"
    android:orientation="vertical"
    tools:context=".controller.activities.SequencerActivity"
    android:background="@drawable/appbg"
    tools:openDrawer="left">

    <!-- Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:orientation="vertical">
        <!-- Bar Buttons and pads -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!-- Bar buttons and progress bars -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_gravity="start"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/button_bar1"
                        android:text="@string/bar1"
                        android:textColor="@color/colorAccent"
                        android:onClick="selectBar"
                        android:background="@drawable/secondary_button" />

                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:id="@+id/progress_bar1"
                        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:id="@+id/bar2_layout"
                    android:layout_gravity="start"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/button_bar2"
                        android:text="@string/bar2"
                        android:onClick="selectBar"
                        android:background="@drawable/secondary_button" />

                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:id="@+id/progress_bar2"
                        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:id="@+id/bar3_layout"
                    android:layout_gravity="start"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/button_bar3"
                        android:text="@string/bar3"
                        android:onClick="selectBar"
                        android:background="@drawable/secondary_button" />

                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:id="@+id/progress_bar3"
                        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:id="@+id/bar4_layout"
                    android:layout_gravity="start"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/button_bar4"
                        android:text="@string/bar4"
                        android:onClick="selectBar"
                        android:background="@drawable/secondary_button" />

                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:id="@+id/progress_bar4"
                        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal" />
                </LinearLayout>

                <Button
                    android:layout_width="75dp"
                    android:layout_height="40dp"
                    android:layout_gravity="start"
                    android:id="@+id/add_bar_button"
                    android:text="@string/add"
                    android:background="@drawable/secondary_button"
                    android:onClick="addBar" />


            </LinearLayout>
            <!-- Spinner and add button -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <Spinner
                    android:layout_width="241dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:id="@+id/sounds_spinner" />

                <Button
                    android:layout_width="75dp"
                    android:layout_height="40dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/secondary_button"
                    android:text="@string/add"
                    android:onClick="openAddSoundDialog" />
            </LinearLayout>


            <!-- Buttons  1 to  4 -->
            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center">

                <Button
                    app:layout_widthPercent="24.125%"
                    app:layout_aspectRatio="100%"
                    app:layout_marginPercent="0.5%"
                    android:id="@+id/seq_button_1"
                    android:onClick="activatePad"
                    android:background="@drawable/disabled_sequencer_pad" />

                <Button
                    app:layout_widthPercent="24.125%"
                    app:layout_aspectRatio="100%"
                    app:layout_marginPercent="0.5%"
                    android:layout_toEndOf="@+id/seq_button_1"
                    android:id="@+id/seq_button_2"
                    android:onClick="activatePad"
                    android:background="@drawable/disabled_sequencer_pad" />

                <Button
                    app:layout_widthPercent="24.125%"
                    app:layout_aspectRatio="100%"
                    app:layout_marginPercent="0.5%"
                    android:layout_toEndOf="@id/seq_button_2"
                    android:id="@+id/seq_button_3"
                    android:onClick="activatePad"
                    android:background="@drawable/disabled_sequencer_pad" />

                <Button
                    app:layout_widthPercent="24.125%"
                    app:layout_aspectRatio="100%"
                    app:layout_marginPercent="0.5%"
                    android:layout_toEndOf="@id/seq_button_3"
                    android:id="@+id/seq_button_4"
                    android:onClick="activatePad"
                    android:background="@drawable/disabled_sequencer_pad" />

                <Button
                    app:layout_widthPercent="24.125%"
                    app:layout_aspectRatio="100%"
                    app:layout_marginPercent="0.5%"
                    android:layout_below="@id/seq_button_1"
                    android:id="@+id/seq_button_5"
                    android:onClick="activatePad"
                    android:background="@drawable/disabled_sequencer_pad" />

                <Button
                    app:layout_widthPercent="24.125%"
                    app:layout_aspectRatio="100%"
                    app:layout_marginPercent="0.5%"
                    android:layout_below="@id/seq_button_1"
                    android:layout_toEndOf="@id/seq_button_5"
                    android:id="@+id/seq_button_6"
                    android:onClick="activatePad"
                    android:background="@drawable/disabled_sequencer_pad" />

                <Button
                    app:layout_widthPercent="24.125%"
                    app:layout_aspectRatio="100%"
                    app:layout_marginPercent="0.5%"
                    android:layout_below="@id/seq_button_1"
                    android:layout_toEndOf="@id/seq_button_6"
                    android:id="@+id/seq_button_7"
                    android:onClick="activatePad"
                    android:background="@drawable/disabled_sequencer_pad" />

                <Button
                    app:layout_widthPercent="24.125%"
                    app:layout_aspectRatio="100%"
                    app:layout_marginPercent="0.5%"
                    android:layout_below="@id/seq_button_1"
                    android:layout_toEndOf="@id/seq_button_7"
                    android:id="@+id/seq_button_8"
                    android:onClick="activatePad"
                    android:background="@drawable/disabled_sequencer_pad" />

                <Button
                    app:layout_widthPercent="24.125%"
                    app:layout_aspectRatio="100%"
                    app:layout_marginPercent="0.5%"
                    android:layout_below="@id/seq_button_5"
                    android:id="@+id/seq_button_9"
                    android:onClick="activatePad"
                    android:background="@drawable/disabled_sequencer_pad" />

                <Button
                    app:layout_widthPercent="24.125%"
                    app:layout_aspectRatio="100%"
                    app:layout_marginPercent="0.5%"
                    android:layout_below="@id/seq_button_5"
                    android:layout_toEndOf="@id/seq_button_9"
                    android:id="@+id/seq_button_10"
                    android:onClick="activatePad"
                    android:background="@drawable/disabled_sequencer_pad" />

                <Button
                    app:layout_widthPercent="24.125%"
                    app:layout_aspectRatio="100%"
                    app:layout_marginPercent="0.5%"
                    android:layout_below="@id/seq_button_5"
                    android:layout_toEndOf="@id/seq_button_10"
                    android:id="@+id/seq_button_11"
                    android:onClick="activatePad"
                    android:background="@drawable/disabled_sequencer_pad" />

                <Button
                    app:layout_widthPercent="24.125%"
                    app:layout_aspectRatio="100%"
                    app:layout_marginPercent="0.5%"
                    android:layout_below="@id/seq_button_5"
                    android:layout_toEndOf="@id/seq_button_11"
                    android:id="@+id/seq_button_12"
                    android:onClick="activatePad"
                    android:background="@drawable/disabled_sequencer_pad" />

                <Button
                    app:layout_widthPercent="24.125%"
                    app:layout_aspectRatio="100%"
                    app:layout_marginPercent="0.5%"
                    android:layout_below="@id/seq_button_9"
                    android:id="@+id/seq_button_13"
                    android:onClick="activatePad"
                    android:background="@drawable/disabled_sequencer_pad" />

                <Button
                    app:layout_widthPercent="24.125%"
                    app:layout_aspectRatio="100%"
                    app:layout_marginPercent="0.5%"
                    android:layout_below="@id/seq_button_9"
                    android:layout_toEndOf="@id/seq_button_13"
                    android:id="@+id/seq_button_14"
                    android:onClick="activatePad"
                    android:background="@drawable/disabled_sequencer_pad" />

                <Button
                    app:layout_widthPercent="24.125%"
                    app:layout_aspectRatio="100%"
                    app:layout_marginPercent="0.5%"
                    android:layout_below="@id/seq_button_9"
                    android:layout_toEndOf="@id/seq_button_14"
                    android:id="@+id/seq_button_15"
                    android:onClick="activatePad"
                    android:background="@drawable/disabled_sequencer_pad" />

                <Button
                    app:layout_widthPercent="24.125%"
                    app:layout_aspectRatio="100%"
                    app:layout_marginPercent="0.5%"
                    android:layout_below="@id/seq_button_9"
                    android:layout_toEndOf="@id/seq_button_15"
                    android:id="@+id/seq_button_16"
                    android:onClick="activatePad"
                    android:background="@drawable/disabled_sequencer_pad" />
            </android.support.percent.PercentRelativeLayout>

            <!-- Play / Stop buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <Button
                    android:layout_width="158dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:id="@+id/seq_play_button"
                    android:text="@string/play"
                    android:layout_margin="4dp"
                    android:background="@drawable/plain_button"
                    android:onClick="play" />

                <Button
                    android:layout_width="158dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:id="@+id/seq_stop_button"
                    android:text="@string/stop"
                    android:layout_margin="4dp"
                    android:background="@drawable/plain_button"
                    android:onClick="stop" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <!-- left drawer -->
    <android.support.design.widget.NavigationView
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:id="@+id/sequencer_drawer"
        android:background="@color/colorPrimary"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/sequencer_drawer"
        app:itemTextColor="@color/white"
        app:itemTextAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

</android.support.v4.widget.DrawerLayout>
